# RESEARCH

./: .gitmodules  Dockerfile  Makefile
AKS+VK+ACI/: Makefile  Makefile.BINARIES  Makefile.ENV.sample  Makefile.STORAGE
ASG/: Makefile  Makefile.BINARIES  Makefile.ENV.sample
RHELDVD/: .gitignore  Makefile
ansible+async/: hosts.ini  main.yml  tasks.yml
ansible+block-rescue-always/: Makefile  README.md  included_task.yml  invalid.yml.j2  invalid2.yml.j2  main.yml
ansible+sha1-on-the-fly/: Makefile  hosts.ini  main.yml  tasks.yml
ansible+vault+template+copy/: .gitignore  00-kek.yml.j2  01-lel.yml.j2  Makefile  ansible.cfg  hosts.ini  main.yml
appmarket-simple/: Makefile  alma8.Dockerfile  ubuntu2004.Dockerfile  ubuntu2204.Dockerfile
azure+ipsec/: .gitignore  Makefile
bash+sha1-on-the-fly/: Makefile
consul-service-mesh-retry/: .env  Dockerfile  Makefile  cont.sh  docker-compose.yml  kubernetes.yml  main.py  pyproject.toml  requirements.txt  stop.sh  test_s1.tavern.yml
context_research/: main.tf
cpuhog/: .gitignore
docker+traefik+acme/: .env  Makefile  scenario1.yml
docker+traefik+mtls/: .env  Dockerfile  Makefile  scenario1.yml
docker+user/: Makefile  alpine.Dockerfile  debian.Dockerfile
docker-image-extract/: .gitignore  Makefile  Makefile.EXTRACT  README.md  extract-docker-image-V1.sh
epicli_on_azure/: .gitignore  Makefile  id.tf  key.tf  nsg.tf  outputs.tf  providers.tf  provision.tf  rg.tf  terraform.auto.tfvars.sample  variables.tf  vm.tf  vnet.tf
equinix_capacity/: Makefile  (+3 more)
jsonschema+jmespath/: Makefile  main.py  pyproject.toml
(+726 files in other folders)
