[tool.poetry]
name = "mesh-retry"
version = "0.1.0"
description = ""
authors = ["Michal Opala <sk4zuzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.9.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
tavern = "^1.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
